<resources>
    <string name="app_name">TaraKainAdmin</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="please_wait">Please wait…</string>
    <string name="server_key">AAAAGgsfwV8:APA91bFCFabnurPZlnNErFNZ0sHHGJrXzMevAUx2lM564yWILIA4ApezQODRqKkBPWAF02JgyxIeKJvSENqRTy1kB_Ez-OV9PRqarAU84paHzbZFpclZvWnXTGIhBz4rrQWPinWsL5bR</string>
    <string name="email">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_mismatch">Password Mismatch</string>
    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="trivia">Trivia</string>
    <string name="logout">Logout</string>
    <string name="owners">Owners</string>
    <string name="name">Name</string>
    <string name="eatery_name">Eatery Name</string>
    <string name="mobile_number">Contact No</string>
    <string name="send_verification">Send Verification</string>
    <string name="send_email">Send Email</string>
    <string name="save">Save</string>
    <string name="view_id">View Id</string>
    <string name="verified">Verified</string>
    <string name="not_verified">Not Verified</string>
    <string name="create_trivia">Create Trivia</string>
    <string name="delete">Delete</string>
    <string name="date">Date</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="post">Post</string>
    <string name="valid_id">Valid ID</string>
    <string name="business_permit">Business Permit</string>
    <string name="notification">Notification</string>
    <string name="notification_title">Title</string>
    <string name="notification_body">Body</string>
    <string name="no_notification">No Notification</string>
    <string name="verify">Verify</string>
</resources>