<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@drawable/rounded_trivia_bg">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/trivia_date"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@id/edit_trivia"
            android:layout_margin="10dp"
            android:text="@string/date"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center_vertical" />

        <LinearLayout
            android:id="@+id/edit_trivia"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_toStartOf="@id/delete_trivia"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/create_trivia"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/edit"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/delete_trivia"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="30dp"
                android:src="@drawable/delete_img"
                app:tint="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:text="@string/delete"
                android:textSize="12sp"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/trivia_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="5dp"
        android:text="@string/title"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center" />

    <ImageView
        android:id="@+id/trivia_image"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:scaleType="centerCrop"
        android:layout_marginBottom="10dp"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/trivia_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:padding="5dp"
        android:text="@string/description"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:gravity="center" />

</LinearLayout>