<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/app_color"
        android:textSize="35sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/edt_txt_bg"
        android:layout_below="@id/app_name"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:padding="10dp"
        android:hint="@string/username"
        android:gravity="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/input_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@drawable/edt_txt_bg"
        android:layout_below="@id/input_username"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:padding="10dp"
        android:hint="@string/email"
        android:gravity="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="textEmailAddress"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textColorHint="@color/black"
        android:gravity="center"
        app:hintEnabled="false"
        app:endIconDrawable="@drawable/custom_password_toggle"
        android:layout_below="@id/input_email">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edt_txt_bg"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etcPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textColorHint="@color/black"
        android:gravity="center"
        app:endIconDrawable="@drawable/custom_password_toggle"
        app:hintEnabled="false"
        android:layout_below="@id/etPasswordLayout">

        <EditText
            android:id="@+id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edt_txt_bg"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:id="@+id/register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/rounded_bg">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/register"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/app_color"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>