<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo"
        android:text="@string/app_name"
        android:textColor="@color/app_color"
        android:textSize="35sp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_margin="20dp"
        />


    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/edt_txt_bg"
        android:layout_below="@id/app_name"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:padding="10dp"
        android:hint="@string/username"
        android:gravity="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="text"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etPasswordLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="15dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center"
        app:hintEnabled="false"
        app:endIconDrawable="@drawable/custom_password_toggle"
        android:layout_below="@id/input_username">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/edt_txt_bg"
            android:gravity="center_horizontal"
            android:layout_gravity="center"
            android:hint="@string/password"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <LinearLayout
            android:id="@+id/register_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_bg">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    android:src="@drawable/register" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/app_color"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/login_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">

            <RelativeLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/rounded_bg">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/login"
                    android:layout_centerInParent="true"
                    android:scaleType="centerCrop"
                    />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textColor="@color/app_color"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>