<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/rounded_trivia_bg"
    android:padding="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/post_trivia"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="30dp"
            android:src="@drawable/create_trivia"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/post"
            android:textSize="12sp"
            android:textColor="@color/white"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_trivia"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/input_trivia_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/rounded_bg"
            android:gravity="start"
            android:hint="@string/title"
            android:inputType="text"
            android:layout_marginTop="3dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/input_trivia_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/rounded_bg"
            android:gravity="start"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <ImageView
            android:id="@+id/add_trivia_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/add_image"
            android:background="@drawable/rounded_bg"
            android:padding="3dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            />

    </LinearLayout>

</RelativeLayout>